--- a/actu_f1_app/src/assets/base.css
+++ b/actu_f1_app/src/assets/base.css
@@ -56,9 +56,9 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
-}
+}*/
 
-body {
+/* body {
   min-height: 100vh;
   color: var(--color-text);
   background:black; 
@@ -83,7 +83,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
+}  */
 
 body {
   background-color: black;
